Починил установку софта; пару эдитов, встроив в них валидацию.

--- a/src/main/resources/templates/room-details.html
+++ b/src/main/resources/templates/room-details.html
@@ -47,7 +47,6 @@
         <table class="table">
             <thead>
             <tr>
-                <th>id</th>
                 <th>Номер рабочего места</th>
                 <th>Инв. номер компьютера</th>
                 <th></th>
@@ -57,11 +56,10 @@
             </thead>
             <tbody>
             <tr th:each="workplaces: ${workplaces}">
-                <td th:text="${workplaces.id}"></td>
                 <td th:text="${workplaces.Number}"></td>
                 <td th:text="${workplaces.computer.getINV()}"></td>
                 <td><a th:href="@{computer-details/{id}(id=${workplaces.computer.getId()})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
-                <td><a th:href="@{workplaces-update/{id}(id=${workplaces.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
+                <td><a th:href="@{/room-details/workplaseEdit/{id}(id=${workplaces.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
                 <td><a th:href="@{workplaces-delete/{id}(id=${workplaces.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></tr>
             </tr>
             </tbody>
