--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -38,18 +38,18 @@
         <div class="col-12">
             <form th:action="@{/register}" method="post" th:object="${user}">
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" th:field="*{username}" class="form-control" placeholder="Enter username">
+                    <label for="username">Логин</label>
+                    <input type="text" id="username" th:field="*{username}" class="form-control" placeholder="Логин">
                     <small class="form-text text-danger" th:each="err : ${#fields.errors('username')}">Validation error</small>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="Password">
+                    <label for="password">Пароль</label>
+                    <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="Пароль">
                     <small class="form-text text-danger" th:each="err : ${#fields.errors('password')}">Validation error</small>
                 </div>
                 <div class="form-group">
-                    <label for="repeatPassword">Repeat password</label>
-                    <input type="password" id="repeatPassword" th:field="*{repeatPassword}" class="form-control" placeholder="Repeat password">
+                    <label for="repeatPassword">Повторите пароль</label>
+                    <input type="password" id="repeatPassword" th:field="*{repeatPassword}" class="form-control" placeholder="Повторите пароль">
                     <small class="form-text text-danger" th:each="err : ${#fields.errors('repeatPassword')}">Validation error</small>
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
