--- a/src/main/resources/templates/role-create.html
+++ b/src/main/resources/templates/role-create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -11,7 +12,6 @@
 
     <a href="@{/Index}" class="control control_home">
 
-        <img src="Logo.png" alt="Home" width="100" height="40">
     </a>
 
 
@@ -48,12 +48,30 @@
 </nav>
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
-    <form action="#" th:action="@{/role-create}" th:object="${role}" method="post">
 
-        <label for="name">RoleName</label>
-        <input type="text" th:field="*{name}" id="name" placeholder="Name">
+    <div th:if = "${Error}" class="alert alert-danger">
+        <span th:text = "${Error}"></span>
+    </div>
+    <form th:action="@{/role-create}" th:object="${role}" method="post">
 
-        <input type="submit" value="Create Role">
+
+        <div class="m-3">
+
+
+            <div class="form-group row">
+
+                <label class="col-form-label col-sm-4">Название роли:</label>
+
+                <div class="col-sm-8">
+
+                    <input type="text" th:field="*{name}" id="name"  placeholder="Введите название роли" class="form-control"/>
+
+                </div>
+
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-success">Создать</button>
 
     </form>
 </div>
