--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -11,51 +11,16 @@
 </head>
 
 <body>		
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<div th:replace="fragments :: header">
 
-            <a href="@{/Index}" class="control control_home">
+</div>
 
-            </a>
+<div>
+    <h1></h1>
+</div>
 
-
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-			<li class="nav-item active">
-				<a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-			</li>
-
-			<li class="nav-item active">
-				<a  th:href="@{/Computers}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список компьютеров<span class="sr-only"></span></a>
-			</li>
-
-			<li class="nav-item active">
-				<a  th:href="@{/software}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список ПО<span class="sr-only"></span></a>
-			</li>
-
-			<li class="nav-item active">
-				<a th:href="@{/RequestList}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-			</li>
-
-			<li class="nav-item active">
-				<a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-			</li>
-
-				<li class="nav-item active">
-					<a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Список ролей<span class="sr-only"></span></button></a>
-				</li>
-
-			</ul>
-
-		<div>
-		<form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
-			<button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
-        </form>
-		</div>
-		
-		
-		</nav>
-   
-    
-</nav>
+<div sec:authorize="hasAuthority('Test')" class="container text-center">
+    <h1>На данный момент у Вас нет доступа к функционалу сайта. Дождитесь, когда Вам выдадту роль.</h1>
+</div>
 </body>
 
