--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,43 +12,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<div th:replace="fragments :: header"></div>
 
-    <a th:href="@{/Index}" class="control control_home">
-
-        <img src="Logo.png" alt="Home" width="100" height="40">
-    </a>
-
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-
-    <div>
-        <form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
-            <button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
-        </form>
-    </div>
-
-</nav>
-
-    <div sec:authorize="hasAuthority('Admin')" class="container text-center">
+    <div sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" class="container text-center">
 <div th:switch="${users}">
     <h2 th:case="null">Пользователи не обнаружены!</h2>
     <div th:case="*">
@@ -56,7 +22,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th>Username</th>
+                <!-- <th>Username</th> -->
                 <th>Имя</th>
                 <th>Фамилия</th>
                 <th>Почта</th>
@@ -68,7 +34,7 @@
             </thead>
             <tbody>
             <tr th:each="user: ${users}">
-                <td th:text="${user.getUsername()}"></td>
+                <!-- <td th:text="${user.getUsername()}"></td> -->
                 <td th:text="${user.firstName}"></td>
                 <td th:text="${user.lastName}"></td>
                 <td th:text="${user.email}"></td>
@@ -80,7 +46,7 @@
             </tbody>
         </table>
     </div>
-        <p><a href="/user-create">Создать нового пользователя</a></p>
+        <p><a th:href="@{register}">Создать нового пользователя</a></p>
 </div>
 </div>
 
@@ -107,13 +73,6 @@
             </table>
         </div>
     </div>
-</div>
-
-<div sec:authorize="hasAuthority('Test')" class="container text-center">
-    <h1>А у тебя нет доступа сюда, кыш</h1>
-    <form th:action="@{/Index}" method="get">
-        <button class="btn html-editor-align-center">Главная страница</button>
-    </form>
 </div>
 
 </body>
