--- a/src/main/resources/templates/workplaces-create.html
+++ b/src/main/resources/templates/workplaces-create.html
@@ -11,35 +11,9 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<div th:replace="fragments :: header"></div>>
 
-    <a th:href="@{/Index}" class="control control_home">
-
-    </a>
-
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-</nav>
-
-<div sec:authorize="hasAuthority('Admin')" class="container text-center">
+<div sec:authorize="hasAnyAuthority('Admin','Заведующий')" class="container text-center">
 
 
     <div class="container text-center">
@@ -98,6 +72,5 @@
 
     </div>
 </div>
-
 </body>
 </html>
