--- a/src/main/resources/templates/Rooms.html
+++ b/src/main/resources/templates/Rooms.html
@@ -11,40 +11,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <a th:href="@{/Index}" class="control control_home">
-
-        <img src="Logo.png" alt="Home" width="100" height="40">
-    </a>
-
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></button></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/user-list}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></button></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-
-    <div>
-        <form sec:authorize="isAuthenticated()" class="form-inline" th:action="@{/logout}" method="post">
-
-            <button type="submit" class="btn btn-outline-primary mr-2" >Выйти</button>
-
-        </form>
-    </div>
-
-
-</nav>
+<div th:replace="fragments :: header"></div>
 
 <div class="container mt-5">
     <h2 class="text-center">Кабинеты</h2>
@@ -61,14 +28,13 @@
         <tr th:each="room: ${rooms}">
             <td th:text="${room.RoomNumber}"></td>
             <td><a th:href="@{room-details/{id}(id=${room.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
-            <td><a th:href="@{room-update/{id}(id=${room.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
-            <td><a th:href="@{room-delete/{id}(id=${room.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></td>
+            <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{room-update/{id}(id=${room.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
+            <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{room-delete/{id}(id=${room.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></td>
         </tr>
         </tbody>
     </table>
 </div>
-<div class="text-center"><a href="/room-create" class="btn btn-outline-primary ml-2 mr-2" role="button">Создать новый кабинет</a></div>
-
+<div class="text-center"><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{room-create}" class="btn btn-outline-primary ml-2 mr-2" role="button">Создать новый кабинет</a></div>
 
 
 
