--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,23 +15,8 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Логин</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        </ul>
-
-        <div sec:authorize="isAnonymous()" class="form-inline my-2 my-lh-0">
-            <a class="btn btn-primary my-2 mr-2 my-sm-0" th:href="@{/login}">Логин</a>
-        </div>
+<div th:replace="fragments :: header">
     </div>
-</nav>
 
 <div class="container">
     <div class="row py-2">
