--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,44 +15,53 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Регистрация</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        </ul>
-
-        <div sec:authorize="isAnonymous()" class="form-inline my-2 my-lh-0">
-            <a class="btn btn-outline-success my-2 mr-2 my-sm-0" th:href="@{/login}">Логин</a>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments :: header"></div>
 
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
             <form th:action="@{/register}" method="post" th:object="${user}">
                 <div class="form-group">
-                    <label for="username">Логин</label>
-                    <input type="text" id="username" th:field="*{username}" class="form-control" placeholder="Логин">
-                    <small class="form-text text-danger" th:each="err : ${#fields.errors('username')}">Validation error</small>
+
+                    <div class="form-group">
+                        <label for="username">Логин</label>
+                        <input type="text" id="username" th:field="*{username}" class="form-control" placeholder="Логин">
+                        <small class="form-text text-danger" th:each="err : ${#fields.errors('username')}">Validation error</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Пароль</label>
+                        <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="Пароль">
+                        <small class="form-text text-danger" th:each="err : ${#fields.errors('password')}">Validation error</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="repeatPassword">Повторите пароль</label>
+                        <input type="password" id="repeatPassword" th:field="*{repeatPassword}" class="form-control" placeholder="Повторите пароль">
+                        <small class="form-text text-danger" th:each="err : ${#fields.errors('repeatPassword')}">Validation error</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Почта</label>
+                        <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="Введите почту" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="firstName">Имя</label>
+                        <input type="text" id="firstName" th:field="*{firstName}" class="form-control" placeholder="Введите имя" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="lastName">Фамилия</label>
+                        <input type="text" id="lastName" th:field="*{lastName}" class="form-control" placeholder="Введите фамилию" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phoneNumber">Номер телефона</label>
+                        <input type="text" id="phoneNumber" th:field="*{phoneNumber}" class="form-control" placeholder="Введите номер телефона (необязательно)">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="Пароль">
-                    <small class="form-text text-danger" th:each="err : ${#fields.errors('password')}">Validation error</small>
-                </div>
-                <div class="form-group">
-                    <label for="repeatPassword">Повторите пароль</label>
-                    <input type="password" id="repeatPassword" th:field="*{repeatPassword}" class="form-control" placeholder="Повторите пароль">
-                    <small class="form-text text-danger" th:each="err : ${#fields.errors('repeatPassword')}">Validation error</small>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
             </form>
         </div>
     </div>
@@ -69,7 +78,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
