--- a/src/main/resources/templates/room-details.html
+++ b/src/main/resources/templates/room-details.html
@@ -11,38 +11,15 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <a th:href="@{/Index}" class="control control_home">
-
-        <img src="Logo.png" alt="Home" width="100" height="40">
-    </a>
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-</nav>
+<div th:replace="fragments :: header"></div>
 
 <!-- <div th:unless="${user.id == null}"></div> -->
 
-<div sec:authorize="hasAuthority('Admin')" class="container text-center">
+<div sec:authorize="hasAnyAuthority('Admin', 'Engineer', 'Teacher', 'Заведующий')" class="container text-center">
     <div class="container mt-5">
+        <div class="form-inline my-2 my-lg-0">
+            <a sec:authorize="hasAnyAuthority('Admin', 'Engineer', 'Teacher')" th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Назад</a>
+        </div>
         <h2>Рабочие места</h2>
         <table class="table">
             <thead>
@@ -59,15 +36,15 @@
                 <td th:text="${workplaces.Number}"></td>
                 <td th:text="${workplaces.computer.getINV()}"></td>
                 <td><a th:href="@{computer-details/{id}(id=${workplaces.computer.getId()})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
-                <td><a th:href="@{/room-details/workplaseEdit/{id}(id=${workplaces.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
-                <td><a th:href="@{workplaces-delete/{id}(id=${workplaces.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></tr>
+                <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{/room-details/workplaseEdit/{id}(id=${workplaces.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
+                <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{/room-details/workplaces-delete/{id}(id=${workplaces.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></tr>
             </tr>
             </tbody>
         </table>
     </div>
-    <div class="text-center"><a th:href="@{/room-details/workplaces-create/{id}(id=${roomNumber})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Добавить рабочее место</a></div>
-
-</div>
+    <div>
+        <a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{/room-details/workplaces-create/{id}(id=${roomNumber})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Добавить рабочее место</a>
+    </div>
 </div>
 </body>
 </html>
