--- a/src/main/resources/templates/user-create.html
+++ b/src/main/resources/templates/user-create.html
@@ -11,28 +11,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-</nav>
+<div th:replace="fragments :: header">
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
 
@@ -41,20 +20,6 @@
         <form th:action="@{/user-create}" th:object="${user}" method="post">
 
             <div class="m-3">
-
-
-                <div class="form-group row">
-
-                    <label class="col-form-label col-sm-4">Номер кабинета*:</label>
-
-                    <div class="col-sm-8">
-
-                        <input type="text" id="username" th:field="*{username}" class="form-control"/>
-
-                    </div>
-
-                </div>
-
 
                 <div class="form-group row">
 
@@ -138,6 +103,7 @@
 
         </form>
     </div>
+</div>
 </div>
 </body>
 </html>
