--- a/src/main/resources/templates/workplaseEdit.html
+++ b/src/main/resources/templates/workplaseEdit.html
@@ -11,33 +11,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-    <a th:href="@{/Index}" class="control control_home">
-
-    </a>
-
-
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-        <li class="nav-item active">
-            <a  th:href="@{/Rooms}" class="btn btn-outline-primary ml-2 mr-2" role="button">Кабинеты<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Request}" class="btn btn-outline-primary ml-2 mr-2" role="button">Заявки<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/users}" class="btn btn-outline-primary ml-2 mr-2" role="button">Пользователи<span class="sr-only"></span></a>
-        </li>
-
-        <li class="nav-item active">
-            <a th:href="@{/Roles}" class="btn btn-outline-primary ml-2 mr-2" role="button">Роли<span class="sr-only"></span></button></a>
-        </li>
-
-    </ul>
-</nav>
+<div th:replace="fragments :: header"></div>
 
 <div sec:authorize="hasAuthority('Admin')" class="container text-center">
 
@@ -92,8 +66,7 @@
 
         </form>
 
-    </div>
 </div>
-
+</div>
 </body>
 </html>
