--- a/src/main/resources/templates/installSoft.html
+++ b/src/main/resources/templates/installSoft.html
@@ -68,7 +68,10 @@
             </div>
 
 
-            <button type="submit" class="btn btn-success">Установить</button>
+            <div th:unless="${Installedsoftware.id == null}">
+                <input type="hidden" th:field="*{id}" th:value="${Installedsoftware.id}" />
+                <button type="submit" class="btn btn-success">Изменить</button>
+            </div>
 
 
         </form>
