--- a/src/main/resources/templates/Computers.html
+++ b/src/main/resources/templates/Computers.html
@@ -30,8 +30,10 @@
         <tr th:each="computer: ${computers}">
             <td th:text="${computer.INV}"></td>
             <!--<td th:text="${computer.isWorking}"></td>!-->
-            <td><a th:href="@{room-details/computer-details/{id}(id=${computer.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
+            <td><a th:href="@{/room-details/computer-details/{id}(id=${computer.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Подробнее</a></td>
+            <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{computerUpdate/{id}(id=${computer.id})}" class="btn btn-outline-primary ml-1 mr-1" role="button">Редактировать</a></td>
             <td><a sec:authorize="hasAnyAuthority('Admin', 'Заведующий')" th:href="@{computer-delete/{id}(id=${computer.id})}" class="btn btn-danger ml-1 mr-1" role="button">Удалить</a></td>
+
         </tr>
         </tbody>
     </table>
