Прошу, не отчисляйте :(

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -40,7 +40,7 @@
                 <td th:text="${user.email}"></td>
                 <td th:text="${user.phoneNumber}"></td>
                 <td th:text="${user.getFullName()}"></td>
-                <td><a th:href="@{user-update/{id}(id=${user.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Редактировать</a></td>
+                <td><a th:href="@{userUpdate/{id}(id=${user.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Редактировать</a></td>
                 <td><a th:href="@{user-delete/{id}(id=${user.id})}" class="btn btn-outline-primary ml-2 mr-2" role="button">Удалить</a></td>
             </tr>
             </tbody>
