Прошу, не отчисляйте :(

--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -19,7 +19,7 @@
 
     <div class="text-center"><h2>[[${pageTitle}]]</h2>
 
-<form th:action="@{/user-update}" th:object="${user}" method="post">
+<form th:action="@{/userUpdate}" th:object="${user}" method="post">
 
     <div class="m-3">
 
