Прошу, не отчисляйте :(

--- a/src/main/resources/templates/computer-details.html
+++ b/src/main/resources/templates/computer-details.html
@@ -16,7 +16,7 @@
 
 
 <div sec:authorize="hasAnyAuthority('Admin', 'Engineer', 'Teacher', 'Заведующий')" class="container text-center">
-    < class="container mt-5">
+    <div class="container mt-5">
     <h2>Установленное ПО</h2>
     <table class="table">
         <thead>
