Прошу, не отчисляйте :(

--- a/src/main/resources/templates/installSoft.html
+++ b/src/main/resources/templates/installSoft.html
@@ -69,7 +69,7 @@
 
 
 
-                <button type="submit" class="btn btn-success">Изменить</button>
+                <button type="submit" class="btn btn-success">Установить</button>
 
 
 
